// Copyright 2020-2021 Team RelicFrog
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package api_usr_role;

import "google/protobuf/timestamp.proto";

option go_package = ".;api_usr_role";

//
// -- proto struct / helper message objects --
//

message Empty {}

//
// -- proto messages --
//

message UserRole {

  string id = 1;
  string meta_name = 2; // translatable role name (e.g. "ROLE_ADMIN")
  string meta_description = 3;
  string meta_app_handle = 4; // as url filter parameter (e.g. "admin", "director")
  string meta_app_icon = 5;
  string meta_app_color_hex = 6;
  bool is_locked = 7; // not deletable (e.g. for role "ROLE_ADMIN")
  bool is_fixture = 8;
  bool is_deleted = 9;

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp deleted_at = 12;
}

//
// -- UserRoleService definition --
//

service UserRoleService {

  rpc CreateRole(CreateRoleReq) returns (CreateRoleRes);
  rpc GetRole(GetRoleReq) returns (GetRoleRes);
  rpc UpdateRole(UpdateRoleReq) returns (UpdateRoleRes);
  rpc DeleteRole(DeleteRoleReq) returns (DeleteRoleRes);
  rpc ListRoles(ListRoleReq) returns (stream ListRoleRes);
  rpc GetVersion (VersionReq) returns (VersionRes);
}

message CreateRoleReq { UserRole role = 1;  }
message CreateRoleRes { UserRole role = 1;  }
message GetRoleReq    { string id = 1;      }
message GetRoleRes    { UserRole role = 1;  }
message UpdateRoleReq { UserRole role = 1;  }
message UpdateRoleRes { UserRole role = 1;  }
message DeleteRoleReq { string id = 1;      }
message DeleteRoleRes { bool success = 1;   }
message ListRoleReq   {                     }
message ListRoleRes   { UserRole role = 1;  }
message VersionReq    {                     }
message VersionRes    { string version = 1; }
